# wildcard-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.sample.toml  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
src/wildcard_mcp/: __init__.py  __main__.py  config.py  server.py
tests/: conftest.py  test_server.py
tests/fixtures/: config.toml
tests/fixtures/data/: animals.txt  colors.txt
