[project]
name = "wildcard-mcp"
version = "0.1.0"
description = "MCP server for injecting true randomness into LLM conversations"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wildcard_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
